feat: fixing title and description head meta for each layout

--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -17,7 +17,7 @@ const {
 <!-- Global Metadata -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+<link rel="icon" type="image/svg+xml" href="/blog-logo.png" />
 <meta name="generator" content={Astro.generator} />
 <meta name="author" content="Mohamad Rafi Irfansyah" />
 <meta name="keywords" content="Mohamad Rafi Irfansyah, Rafi Irfansyah, Software Developer, Web Developer" />
@@ -37,7 +37,7 @@ const {
 <meta property="og:title" content={title} />
 <meta property="og:description" content={description} />
 <meta property="og:image" content={new URL(image, Astro.site)} />
-<meta property="og:site_name" content="Mohamad Rafi Irfansyah" />
+<meta property="og:site_name" content="rafirfansyah.site" />
 
 <!-- Twitter -->
 <meta property="twitter:card" content="summary_large_image" />
