--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -7,7 +7,7 @@ import MainLayout from "@layouts/MainLayout.astro";
 import { AboutStackboxData } from "@utils/static";
 ---
 
-<MainLayout title="About Me" description="Short information about who I am">
+<MainLayout title="About Me" description="Short information about who is Mohamad Rafi Irfansyah">
   <div class="flex flex-col">
     <!-- Picture Section -->
     <div class="pict-section flex justify-center pt-20 md:pt-32 lg:pt-[340px] text-center w-full">
