--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -13,7 +13,7 @@ const posts = (await getCollection("blog")).sort(
 const tags = Array.from(new Set(posts.flatMap((post) => post.data.tags || [])));
 ---
 
-<MainLayout title="Blogs" description="Blog Index Page">
+<MainLayout title="The Blogs" description="Mohamad Rafi Irfansyah's Blogs Page">
   <div
     class="flex flex-col px-4 sm:px-8 md:px-12 lg:px-20 pb-20 sm:pb-32 lg:pb-72 pt-8 lg:pt-14 justify-center blog-index-container"
   >
