--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,7 +8,10 @@ import Projects from "src/section/home/Projects.astro";
 import "@/styles/global.css";
 ---
 
-<MainLayout title="Home" description="Home Page">
+<MainLayout 
+  title="Mohamad Rafi Irfansyah"
+  description="Welcome to the personal website of Mohamad Rafi Irfansyah. Discover my work, projects, and experiences."
+>
   <div class="px-4 md:px-32 flex flex-col">
     <Introduction />
     <Traits />
