--- a/src/pages/project/index.astro
+++ b/src/pages/project/index.astro
@@ -9,7 +9,7 @@ const posts = (await getCollection("project")).sort(
 );
 ---
 
-<MainLayout title="Projects" description="Project Index Page">
+<MainLayout title="The Projects" description="Mohamad Rafi Irfansyah's Projects Page">
   <div
     class="flex flex-col px-4 sm:px-8 md:px-12 lg:px-20 pb-20 sm:pb-32 lg:pb-72 pt-8 lg:pt-14 justify-center blog-index-container"
   >
