feat: adding description in jsonld astro

--- a/src/components/JsonLd.astro
+++ b/src/components/JsonLd.astro
@@ -6,6 +6,8 @@ const schema = {
   "givenName": "Mohamad Rafi",
   "familyName": "Irfansyah",
   "url": Astro.site,
+  "jobTitle": "Software Developer",
+  "description": "Welcome to the personal website of Mohamad Rafi Irfansyah. Discover my work, projects, and experiences.",
   "sameAs": [
     "https://x.com/mazrafihehe",
     "https://github.com/cakuakz",
