--- a/src/components/blog/BlogCard.astro
+++ b/src/components/blog/BlogCard.astro
@@ -18,7 +18,7 @@ const randomId = Math.floor(Math.random() * 1000);
 <div class="justify-self-center" data-post data-tags={JSON.stringify(tags)}>
   <a href={href}>
     <div
-      class="flex flex-col border border-[#242424] bg-[#1C1C1C] rounded-sm cursor-pointer max-w-[430px] max-h-[436px] w-full h-full"
+      class="flex flex-col border border-[#242424] bg-[#1C1C1C] rounded-sm cursor-pointer max-w-[430px] w-full h-full"
     >
       <img
         src={imgUrl ? imgUrl : `https://picsum.photos/seed/${randomId}/400/250`}
